--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:production": "webpack --mode production",
     "build:external": "webpack --config ./external/webpack.config.js",
     "build:multi": "webpack --config ./multi-entry-point/webpack.config.js",
-    "build:css": "webpack --config ./css-style-loader/webpack.config.js"
+    "build:css": "webpack --config ./css-style-loader/webpack.config.js",
+    "build:plugins": "webpack --config ./plugins/webpack.config.js"
   },
   "keywords": [
     "webpack"
@@ -17,6 +18,8 @@
   "license": "MIT",
   "devDependencies": {
     "css-loader": "2.1.1",
+    "html-webpack-plugin": "3.2.0",
+    "mini-css-extract-plugin": "0.7.0",
     "style-loader": "1.0.1",
     "webpack": "4.39.3",
     "webpack-cli": "3.3.8"
